--- a/lw5/task2/package.json
+++ b/lw5/task2/package.json
@@ -6,14 +6,20 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "minify-js": "uglifyjs listing-store.js -o build/listing-store.js",
-    "minify-css": "uglifycss listing-store.css --output build/listing-store.css"
+    "minify-css": "uglifycss listing-store.css --output build/listing-store.css",
+    "copy-html": "copyfiles index.html build",
+    "build": "npm-run-all copy-html minify-js minify-css"
   },
   "author": "Ilya Shimaev",
   "license": "ISC",
   "devDependencies": {
+    "copyfiles": "^2.4.1",
     "minify": "^7.0.1",
     "uglify-js": "^3.13.4",
     "uglifycss": "0.0.29",
     "uglifyjs": "^2.4.11"
+  },
+  "dependencies": {
+    "npm-run-all": "^4.1.5"
   }
 }
